# colegio_app

./: .gitignore  config.py  main.py  pyproject.toml  render.yaml  requirements.txt
models/: database.py  entities.py
utils/: file_manager.py
viewmodels/: admin_vm.py  student_vm.py
views/: admin_view.py  student_view.py
