[project]
name = "colegio-app"
version = "0.1.0"
description = "Sistema de Gestión Escolar con NiceGUI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fpdf>=1.7.2",
    "nicegui>=3.10.0",
    "pillow>=12.2.0",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []