[project]
name = "colegio-app"
version = "1.0.0"
description = "Sistema de Gestión Escolar con NiceGUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=1.4.30",
    "sqlalchemy>=2.0.35",
    "fpdf>=1.7.2",
    "pillow>=10.4.0",
]

# Esta sección le dice a Hatch que no intente construir un paquete
[tool.hatch.build.targets.wheel]
bypass-selection = true
packages = ["."]

# O alternativamente, indicar explícitamente qué incluir
[tool.hatch.build]
exclude = [
    ".venv/",
    "__pycache__/",
    "*.pyc",
    "data/",
    "storage/",
    "backups/",
]
